--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,10 +1,24 @@
-{{#each users as |user| }}
-<div class="row align-center mb-5">
+{{#each posts as |post| }}
+<div class="text-center">
+  <h2>{{name}}</h2>
+  
+  <p>{{body}}</p>
+  <p>Created by {{user.name}} on {{format_date date_created}}</p>
+  <p>
+   
+   
+  <p>
+    <button class="btn btn-primary"></button>
+  </p>
+</div>
+
+
+{{!-- <div class="row align-center mb-5">
   <div class="col-md-6">
     <h2>{{{get_emoji}}} {{user.name}}</h2>
   </div>
   <div class="col-md-6">
     <h3><a href="mailto:{{user.email}}">{{user.email}}</a></h3>
   </div>
-</div>
+</div> --}}
 {{/each}}
