--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,15 +1,16 @@
 {{#each posts as |post| }}
-<div class="text-center">
+
+<div class="text-center" id="card">
   <h2>{{name}}</h2>
   
-  <p>{{body}}</p>
-  <p>Created by {{user.name}} on {{format_date date_created}}</p>
-  <p>
-   
-   
-  <p>
-    <button class="btn btn-primary"></button>
-  </p>
+</div>
+<div class="card">
+  <div class="card-header">
+    <p>Created by {{user.name}} on {{format_date date_created}}</p>
+  </div>
+  <div class="card-body">   
+      <p>{{body}}</p>   
+  </div>
 </div>
 
 
