changed around stuff to connect to heroku

--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -35,8 +35,24 @@
       </div>
       <div class="col-md-4">
         <button class="btn btn-sm btn-danger" data-id="{{post.id}}">DELETE</button>
+        <button class="btn btn-sm btn-info" data-id="{{post.id}}">EDIT</button>
       </div>
     </div>
+
+    <form class="form edit-post-form" style="display: none;">
+      <div class="form-group">
+        <label for="edit-post-title">post title:</label>
+        <input class="form-input" type="text" id="edit-post-title" name="edit-post-title" />
+      </div>
+      <div class="form-group">
+        <label for="edit-post-body">body:</label>
+        <textarea class="form-input" id="edit-post-body" name="edit-post-body"></textarea>
+      </div>
+      <div class="form-group">
+        <button type="submit" class="btn btn-primary">Update</button>
+        <button type="button" class="btn btn-secondary cancel-edit-post">Cancel</button>
+      </div>
+    </form>
     
     {{/each}}
   {{/if}}
